# e-commerce-ml-ops

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dvc.yaml  main.py  mlflow.db  params.yaml  pyproject.toml
configs/: config.py
docs/: action_plan.md  tech_challenge_spec.md
notebooks/: 01_eda.ipynb  02_baselines.ipynb
reports/: metrics.json
scripts/: validate_env.py
src/: schema.py
src/api/: main.py
src/models/: model.py  predict.py
src/stages/: evaluate.py  feature_eng.py  preprocess.py  train.py
tests/: test_api.py  test_data_validation.py  test_features.py  test_inference.py  test_sanity.py  test_utils.py
